fix rates circles on mobile view

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -1342,7 +1342,7 @@ body {
   h2 {
     height: 100px;
     width: 100px;
-    padding-top: 10px;
+    padding-top: 16px;
     font-weight: 300;
     background: #fff;
     color: $brand-color-primary;
@@ -1369,7 +1369,6 @@ body {
       display: block;
       font-size: 14px;
       line-height: 14px;
-      height: 14px;
       text-transform: uppercase;
       font-family: Brandon_Grotesque;
       padding-left: 2px;
